# WS_24_Statsim

./: .gitignore  .gitignore.txt  pyproject.toml
exercise1/: exercise_1_stadler.Rmd  exercise_1_stadler.aux
exercise2/: exercise_2_stadler.Rmd
exercise3/: exercise_3_stadler.Rmd
exercise4/: exercise_4_stadler.Rmd
