[tool.poetry]
name = "ws-24-statsim"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
radian = "^0.6.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
